[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemy crosshair/enemy idle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemic.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 550.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"

[node name="Enemic" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 5
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.21022, -0.210228 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -2.98023e-08, -4.47035e-08 )
polygon = PoolVector2Array( -0.996796, -32.2565, -27.1597, -17.0537, -27.5133, 15.8267, -1.35036, 30.3224, 27.2874, 15.4732, 26.9339, -15.993 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 1 )

[node name="TurnAxis" type="Position2D" parent="."]
rotation = 0.888373

[node name="CastPoint" type="Position2D" parent="TurnAxis"]
position = Vector2( 25, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
